sample/retrieveUnpackaged/objects/Expression_of_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Email_Address__c</fullName>
        <label>Confirm Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_DPID__c</fullName>
        <label>Mailing DPID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code__c</fullName>
        <label>Mailing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address__c</fullName>
        <label>Mailing Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Expressions of Interest</relationshipLabel>
        <relationshipName>Expressions_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_details__c</fullName>
        <description>Value to be entered if the Where did you hear about the Early Connection Option? is set to Other.</description>
        <label>Other details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Country__c</fullName>
        <label>Property Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_DPID__c</fullName>
        <label>Property DPID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Postal_Code__c</fullName>
        <label>Property Postal code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street_Address__c</fullName>
        <label>Property Street address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_did_you_hear_about_ECO__c</fullName>
        <label>What prompted your enquiry today?</label>
        <picklist>
            <picklistValues>
                <fullName>Outdoor advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter from SE Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Peninsula News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mornington Peninsula Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE Water website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE Water bill insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rye office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Expression of Interest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Property_City__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_EOIs</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Property_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </filters>
        <filters>
            <field>Opportunity__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>New EOIs</label>
    </listViews>
    <nameField>
        <displayFormat>EOI-{0000000}</displayFormat>
        <label>EOI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expressions of Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Customer_Number_Numeric</fullName>
        <active>true</active>
        <description>Customer number must be a numeric value</description>
        <errorConditionFormula>NOT(ISNUMBER( Customer_Number__c )  ||  ISBLANK(Customer_Number__c))</errorConditionFormula>
        <errorDisplayField>Customer_Number__c</errorDisplayField>
        <errorMessage>The value entered is invalid.  Please click on the link   What does this look like?   for help.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_Numeric</fullName>
        <active>true</active>
        <description>Phone number must be a numeric value</description>
        <errorConditionFormula>NOT(ISNUMBER(  Phone_Number__c  ) || ISBLANK(Phone_Number__c ))</errorConditionFormula>
        <errorDisplayField>Phone_Number__c</errorDisplayField>
        <errorMessage>Enter your details without spaces or special characters</errorMessage>
    </validationRules>
</CustomObject>